# evolutionary-subword-tokenization

./: .gitignore  BuildREADME.md  MIT-LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
Prog/: DMS_data_analysis.ipynb  ECCB_bpe_mod.ipynb  ProteinGYM_data_analysis.ipynb  ProteinGym_DMS_assays.ipynb  adherence_to_linguistic_laws.ipynb  create_esm_faiss.py  dataset_schema.ipynb  domain_conservation_analysis.ipynb  domain_handling.ipynb  effect_of_substitution_matrices.ipynb  esm_embedding_similarity_analysis_for_mutations.ipynb  esm_embedding_similarity_analysis_for_mutations_new.ipynb  esm_study.ipynb  experiment_clinvar.ipynb  experiment_dms.ipynb  experiment_esm_functions.py  experiment_esm_mutation_vs_alternative.ipynb  experiment_go_functions.py  experiment_go_topic_model.ipynb  general_tokenizer_statistics.ipynb  go_functions.py  go_ipr_prosite_data_collect.ipynb  go_slim_analysis.ipynb  go_slim_analysis_sequence.ipynb  go_slim_analysis_unit_sim.ipynb  human_db_arrangment.ipynb  linguistic_laws_meet_protein_sequences.ipynb  motif_conservation_analysis.ipynb  motif_detection.ipynb  multiprocess_clinvar_analysis.py  multiprocess_dms_analysis.py  multiprocess_general_stats.py  multiprocess_training.py  prelim_genealogical.ipynb  prelim_shared_unit.ipynb  prelim_vocab_identity.ipynb  prelim_vocab_stats.ipynb  pretokenized_dataset_generation.ipynb  progress2_analysis.ipynb  protein_embedding_database.py  (+3 more)
Prog/EfficientBPE/: alternate_mutation.ipynb  bpe_functions.py  clean_notebook.ipynb  compare_matrices.ipynb  compare_utilization.ipynb  efficient.ipynb  helper_classes.py  multiprocess_training.py  run_segmentation.ipynb  segmentation_experiment.ipynb  training_from_db.ipynb  vocab_downsampler.py  vocabulary_analysis.ipynb  vocabulary_functions.py
Prog/EfficientBPE/vocabs/huggingface/: HF_human_bpe_10000.json  HF_human_mutbpe_10000.json  HF_membrane_bpe_10000.json  HF_membrane_mutbpe_10000.json
Prog/EfficientBPE/vocabs/internal/: human_mutbpe_10000.json  membrane_bpe_10000.json  membrane_mutbpe_10000.json
Prog/examples/: sample.fasta  training_example.ipynb
Prog/general_stats/: results.csv  results_processed.csv
Prog/result_files/: clinvar_analysis.csv  dms_analysis.csv  general_stats.csv  go_slim_analysis_unit_sim_mf.csv
RSRC/vocabs/: hf_uniref50_bpe_6400.json  hf_uniref50_mutbpe_0.7_3_12_0.05_6400.json  uniref50_bpe_6400.json  uniref50_evobpe_0.7_3_12_0.05_6400.json
docs/: index.md
docs/tutorials/: getting-started.ipynb
experiments/: push_to_hub.py  run.py
experiments/scripts/: run.sh
template_repo/: model.py
